--- a/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
+++ b/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup=(\"I\",)\n"
    ]
   },
   {
@@ -33,11 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(type(tup))"
    ]
   },
   {
@@ -55,13 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('I',)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "A tuple cannot be changed. You have to convert it to a list before using append.\n",
     "\n",
-    "# Your explanation here\n"
+    "\n"
    ]
   },
   {
@@ -83,9 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "A tuple cannot be changed\n"
    ]
   },
   {
@@ -103,11 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup1 = (\"I\", \"r\", \"o\", \"n\")\n",
+    "tup2 = (\"h\", \"a\", \"c\", \"k\")\n",
+    "print(tup1)\n",
+    "print(tup2)\n"
    ]
   },
   {
@@ -121,11 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3 = tup1 + tup2\n",
+    "print(tup3)\n"
    ]
   },
   {
@@ -137,11 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(len(tup3))\n",
+    "print(len(tup1))\n",
+    "print(len(tup2))\n",
+    "\n"
    ]
   },
   {
@@ -153,11 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "index = tup3.index('h')\n",
+    "print(index)\n"
    ]
   },
   {
@@ -177,11 +234,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n",
+      "true\n",
+      "false\n",
+      "false\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(\"true\")\n",
+    "    else:\n",
+    "        print(\"false\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i == int(tup3[i]):\n",
+    "        print(\"true\")\n",
+    "    else :\n",
+    "        print(\"false\")\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -195,12 +284,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "the number of occurrence of each letter: a,1\n",
+      "false\n",
+      "true\n",
+      "the number of occurrence of each letter: c,1\n",
+      "false\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "a=1\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(\"true\")\n",
+    "        print(f'the number of occurrence of each letter: {i},{a}')\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"false\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
