--- a/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
+++ b/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[29, 27, 17, 47, 75, 37, 12, 66, 33, 86, 98, 43, 90, 57, 71, 93, 88, 78, 5, 67, 72, 79, 87, 8, 13, 21, 83, 36, 58, 31, 81, 92, 84, 49, 35, 23, 38, 96, 85, 59, 14, 2, 30, 74, 69, 91, 99, 20, 77, 53, 45, 65, 94, 54, 39, 3, 55, 11, 89, 60, 7, 50, 15, 42, 25, 40, 16, 0, 32, 70, 28, 41, 64, 97, 73, 62, 51, 76, 10, 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "sample_list_1 =[]\n",
+    "random.sample(range(0,100), 80)\n",
+    "sample_list_1 = random.sample(range(0,100), 80)\n",
+    "print(sample_list_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -54,11 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 =set(sample_list_1)\n",
+    "print(len(set1))\n"
    ]
   },
   {
@@ -77,11 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_2 =[]\n",
+    "\n",
+    "for i in range (0,80):\n",
+    "    sample_list_2.append(i)\n",
+    "len(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +136,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(len(set2))\n",
+    "type(set2)"
    ]
   },
   {
@@ -109,11 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{96, 97, 98, 99, 81, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set3 = set1.difference(set2)\n",
+    "print(set3)\n"
    ]
   },
   {
@@ -125,11 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 34, 4, 68, 6, 9, 44, 46, 48, 18, 19, 52, 22, 56, 26, 61, 63}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set4 = set2.difference(set1)\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set5 = set1.intersection(set2)\n"
    ]
   },
   {
@@ -165,11 +247,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "80\n",
+      "17\n",
+      "17\n",
+      "63\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))\n",
+    "\n"
    ]
   },
   {
@@ -181,11 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set6=set()\n",
+    "type(set6)"
    ]
   },
   {
@@ -197,11 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "set6.update(set3)\n",
+    "set6.update(set5)\n"
    ]
   },
   {
@@ -213,11 +325,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "s = set1.difference(set6) \n",
+    "print(s)\n"
    ]
   },
   {
@@ -229,11 +350,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "s12 = set1.issubset(set2) \n",
+    "print(s12)\n",
+    "\n",
+    "s13 = set1.issubset(set3) \n",
+    "print(s12)"
    ]
   },
   {
@@ -247,11 +381,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "s345 = set3.union(set4,set5) \n",
+    "s12 = set1.union(set2) \n",
+    "\n",
+    "sunion = s345.difference(s12) \n",
+    "print(sunion)"
    ]
   },
   {
@@ -263,11 +409,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lenght of set1 : 79\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "lset1=[]\n",
+    "lset1 = list(set1)\n",
+    " \n",
+    "lset1.pop(0)\n",
+    "\n",
+    "set1 =set(lset1)\n",
+    "print(f'lenght of set1 : {len(set1)}')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -283,12 +445,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 5, 7, 8, 10, 12, 13, 14, 15, 16, 17, 20, 23, 24, 25, 27, 28, 30, 32, 33, 35, 36, 37, 38, 40, 42, 43, 45, 47, 50, 53, 54, 55, 57, 58, 60, 62, 64, 65, 66, 67, 70, 72, 73, 74, 75, 76, 77, 78, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "slist_to_remove=set(list_to_remove)\n",
+    "print(set1-slist_to_remove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
