--- a/Labs/module_1/List-Comprehension/your-code/main.ipynb
+++ b/Labs/module_1/List-Comprehension/your-code/main.ipynb
@@ -151,16 +151,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from os import listdir\n",
+    "\n",
+    "path = '../data'\n",
+    "def find_csv_filenames(path, suffix=\".csv\" ):\n",
+    "    filenames = listdir(path)\n",
+    "    return [ filename for filename in filenames if filename.endswith( suffix ) ]\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Bonus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-44d5a1528b89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "path = 'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'\n",
+    "\n",
+    "os.chdir(path)\n",
+    "\n",
+    "Path.cwd()\n",
+    "\n",
+    "for p,n,f in os.walk(os.getcwd()):\n",
+    "    for a in f:\n",
+    "        a = str(a)\n",
+    "        if a.endswith('.csv'):\n",
+    "            print(a)\n",
+    "            print(p)"
    ]
   },
   {
@@ -207,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
