--- a/Labs/module_1/List-Comprehension/your-code/main.ipynb
+++ b/Labs/module_1/List-Comprehension/your-code/main.ipynb
@@ -27,10 +27,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 36,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in range(1,51)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,10 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i for i in range(2,201)])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,10 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i for list_list in a for i in list_list ])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.7876326, 0.77109654, 0.81835917, 0.87645456, 0.7066597, 0.57433389, 0.92796258, 0.69814654, 0.97016248, 0.71725408, 0.87702738, 0.76615487, 0.57871812, 0.53222417, 0.9976855, 0.80930099, 0.50962849, 0.94555126]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i for list_list in a for i in list_list if i >=0.5 ])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,10 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55867166, 0.06210792, 0.08147297, 0.82579068, 0.91512478, 0.06833034, 0.05440634, 0.65857693, 0.30296619, 0.06769833, 0.96031863, 0.51293743, 0.09143215, 0.71893382, 0.45850679, 0.58256464, 0.59005654, 0.56266457, 0.71600294, 0.87392666, 0.11434044, 0.8694668, 0.65669313, 0.10708681, 0.07529684, 0.46470767, 0.47984544, 0.65368638, 0.14901286, 0.23760688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i for list_list_list in b for list_list in list_list_list for i in list_list ])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06210792, 0.08147297, 0.06833034, 0.05440634, 0.30296619, 0.06769833, 0.09143215, 0.45850679, 0.11434044, 0.10708681, 0.07529684, 0.46470767, 0.47984544, 0.14901286, 0.23760688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i for list_list_list in b for list_list in list_list_list for i in list_list if i <=0.5 ])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,16 +263,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/your-code/data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-07e5babd36d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Open a file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/Users/tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/your-code/data\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mdirs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# This would print all the files and directories\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/your-code/data'"
+     ]
+    }
+   ],
    "source": [
-    "from os import listdir\n",
-    "\n",
-    "path = '../data'\n",
-    "def find_csv_filenames(path, suffix=\".csv\" ):\n",
-    "    filenames = listdir(path)\n",
-    "    return [ filename for filename in filenames if filename.endswith( suffix ) ]\n"
+    "#import os,sys\n",
+    "#file_list=[f for f in os.listdir('C://Users/tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/your-code/data') if f.endwith('.csv')]\n",
+    "#print(file_list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/your-code'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -172,36 +314,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-44d5a1528b89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, -2, -3, -4, -5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[-1, 2, -3, 4, -5]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#insert values\n",
+    "#invert([1,2,3,4,5]) == [-1,-2,-3,-4,-5]\n",
+    "#invert([1,-2,3,-4,5]) == [-1,2,-3,4,-5]\n",
+    "#invert([]) == []\n",
+    "\n",
+    "lst=[1,2,3,4,5]\n",
+    "print([-i for i in lst])\n",
+    "\n",
+    "lst1=[1,-2,3,-4,5]\n",
+    "[-i for i in lst1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18,20\n",
+      "['open']\n",
+      "20,45\n",
+      "['open', 'open']\n",
+      "45,2\n",
+      "['open', 'open', 'open']\n",
+      "2,61\n",
+      "['open', 'open', 'open', 'open']\n",
+      "61,12\n",
+      "['open', 'open', 'open', 'open', 'senior']\n",
+      "12,37\n",
+      "['open', 'open', 'open', 'open', 'senior', 'open']\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
+    "#Categorize new member\n",
+    "#To be a senior, a member must be at least 55 years old and have a handicap greater than 7\n",
     "\n",
-    "path = 'C:/Tatiana/ironhack/248_Repo/Labs/module_1/List-Comprehension/data/'\n",
+    "members_old_handicap=[[18, 20],[45, 2],[61, 12],[37, 6],[21, 21],[78, 9]]\n",
+    "#print([i for list_member in members_old_handicap for i in list_member if i[0]>=55& i[1]>7 ])\n",
     "\n",
-    "os.chdir(path)\n",
+    "values_members=[]\n",
+    "for list_member in members_old_handicap:\n",
+    "    for i in list_member:\n",
+    "        values_members.append(i)\n",
+    "       # print(values_members)\n",
     "\n",
-    "Path.cwd()\n",
+    "values=[]\n",
     "\n",
-    "for p,n,f in os.walk(os.getcwd()):\n",
-    "    for a in f:\n",
-    "        a = str(a)\n",
-    "        if a.endswith('.csv'):\n",
-    "            print(a)\n",
-    "            print(p)"
+    "for i in range(6):\n",
+    "    if values_members[i]>=55 and values_members[i+1]>7: \n",
+    "        print(f'{values_members[i]},{values_members[i+1]}')\n",
+    "        values.append(\"senior\")\n",
+    "        print(values)\n",
+    "        i+=2\n",
+    "        \n",
+    "    else:\n",
+    "        print(f'{values_members[i]},{values_members[i+1]}')\n",
+    "        values.append(\"open\")\n",
+    "        print(values)\n",
+    "        i+=2\n",
+    "        \n",
+    "#print(values)\n",
+    "            \n",
+    "    \n",
+    "\n",
+    "            \n",
+    "#for list_member in members_old_handicap:\n",
+    " #   print(list_member[0])\n",
+    "  #  [\"Open\", \"Open\", \"Senior\", \"Open\", \"Open\", \"Senior\"]\n",
+    "    \n",
+    "            "
    ]
   },
   {
