update challenge2 poem

--- a/Labs/module_1/String-Operations/your-code/main.ipynb
+++ b/Labs/module_1/String-Operations/your-code/main.ipynb
@@ -21,34 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-48-5b3931c5145c>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-5b3931c5145c>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    print(%area_of_circle(r))\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['They ate the mystery meat', ' It tasted like chicken', '']\n"
      ]
     }
    ],
-   "source": [
-    "#program to find area of circle using functions\n",
-    "import math\n",
-    "\n",
-    "#Function that calculates area of circle\n",
-    "def area_of_circle(r): \n",
-    "    a = r**2 * math.pi\n",
-    "    return a\n",
-    "\n",
-    "r = float(input(\"Enter the radius of the circle: \"))\n",
-    "print(%area_of_circle(r))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -156,13 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['say', 'the', 'world', 'will', 'end', 'in', 'fire,', 'Some', 'say', 'in', 'ice.', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire.', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice,', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n",
       "Counter({'say': 3, 'I': 3, 'in': 2, 'of': 2, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'fire,': 1, 'Some': 1, 'ice.': 1, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'desire': 1, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'fire.': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice,': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'ice': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1})\n"
      ]
     }
@@ -178,11 +167,13 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
+    "#print(str(poem).strip(\".\"))\n",
+    "\n",
     "# Your code here:\n",
     "lst=[]\n",
     "lst = str(poem).strip(\".\").strip(\",\").split()\n",
     "\n",
-    "#print(lst)\n",
+    "print(lst)\n",
     "\n",
     "\n",
     "dict={}\n",
@@ -202,9 +193,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All the words that appear in the text and do not appear in the blacklist :\n",
+      "{'And', 'day', 'night', 'beheld', 'wiles', 'friend', 'veild', 'into', 'deceitful', 'had', 'end', 'knew', 'When', 'my', 'with', 'pole', 'fears', 'smiles', 'morning', 'foe', 'angry', 'both', 'grew', 'bore', 'was', 'outstretched', '&', 'tears', 'In', 'stole', 'not', 'grow', 'that', 'garden', 'see', 'wrath', 'soft', 'My', 'shine', 'tree', 'I', 'Night', 'sunned', 'mine', 'bright', 'did', 'beneath', 'Till', 'apple', 'he', 'glad', 'waterd', 'told'}\n",
+      "all non letter characters are deleted and all words are converted to lower case.\n",
+      "i was angry with my friend \n",
+      "i told my wrath my wrath did end\n",
+      "i was angry with my foe \n",
+      "i told it not my wrath did grow \n",
+      "\n",
+      "and i waterd it in fears\n",
+      "night & morning with my tears \n",
+      "and i sunned it with smiles\n",
+      "and with soft deceitful wiles \n",
+      "\n",
+      "and it grew both day and night \n",
+      "till it bore an apple bright \n",
+      "and my foe beheld it shine\n",
+      "and he knew that it was mine \n",
+      "\n",
+      "and into my garden stole \n",
+      "when the night had veild the pole \n",
+      "in the morning glad i see \n",
+      "my foe outstretched beneath the tree\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -228,9 +248,24 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n",
-    "\n"
+    "txtpoem = poem.replace(\";\",\"\").replace(\".\",\"\").replace(\":\",\"\").replace(\",\",\"\")\n",
+    "lstpoem = txtpoem.split()\n",
+    "#print(lstpoem)\n",
+    "\n",
+    "blacklistset=set(blacklist)\n",
+    "lstpoemset=set(lstpoem)\n",
+    "onlypoem=lstpoemset-blacklistset\n",
+    "print(f'All the words that appear in the text and do not appear in the blacklist :\\n{onlypoem}')\n",
+    "\n",
+    "print(f'all non letter characters are deleted and all words are converted to lower case.\\n{txtpoem.lower()}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
