--- a/Labs/module_1/Numpy/your-code/main.ipynb
+++ b/Labs/module_1/Numpy/your-code/main.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import numpy as np"
    ]
   },
   {
@@ -28,11 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.19.1\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(np.__version__)"
    ]
   },
   {
@@ -45,29 +53,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.24378898, 0.56090186, 0.21651593, 0.07740436, 0.0568608 ],\n",
+       "        [0.03123124, 0.7019853 , 0.47127175, 0.59374347, 0.86614783],\n",
+       "        [0.32538374, 0.256171  , 0.12676298, 0.01987238, 0.35913956]],\n",
+       "\n",
+       "       [[0.81131396, 0.12551257, 0.81550582, 0.54526635, 0.37695554],\n",
+       "        [0.6856947 , 0.96129555, 0.43384217, 0.42332409, 0.49464326],\n",
+       "        [0.60668046, 0.3159333 , 0.52426685, 0.53545079, 0.6679694 ]]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 1"
+    "a = np.random.random((2,3,5))\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 4  5  6  7  8]\n",
+      " [ 7  8  9 10 11]\n",
+      " [ 1  2  3  4  5]\n",
+      " [ 4  5  6  7  8]\n",
+      " [ 7  8  9 10 11]\n",
+      " [ 1  2  3  4  5]\n",
+      " [ 4  5  6  7  8]\n",
+      " [ 7  8  9 10 11]\n",
+      " [ 1  2  3  4  5]\n",
+      " [ 4  5  6  7  8]\n",
+      " [ 7  8  9 10 11]\n",
+      " [ 1  2  3  4  5]\n",
+      " [ 4  5  6  7  8]\n",
+      " [ 7  8  9 10 11]\n",
+      " [ 1  2  3  4  5]\n",
+      " [ 4  5  6  7  8]\n",
+      " [ 7  8  9 10 11]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 2"
+    "a2 = [[1,2,3],[4,5,6],[7,8,9],[4,5,6],[7,8,9],\n",
+    "      [1,2,3],[4,5,6],[7,8,9],[4,5,6],[7,8,9],\n",
+    "      [1,2,3],[4,5,6],[7,8,9],[4,5,6],[7,8,9],\n",
+    "      \n",
+    "      [1,2,3],[4,5,6],[7,8,9],[4,5,6],[7,8,9],\n",
+    "     [1,2,3],[4,5,6],[7,8,9],[4,5,6],[7,8,9],\n",
+    "      [1,2,3],[4,5,6],[7,8,9],[4,5,6],[7,8,9]\n",
+    "      \n",
+    "]\n",
+    "a2 = np.array(lst_lst)\n",
+    "print(a2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Method 3"
+    "a3 = np.random.randint(0, 10, size=(2, 3, 5))"
    ]
   },
   {
@@ -79,11 +140,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[3 6 9]\n",
+      "  [5 4 2]]\n",
+      "\n",
+      " [[9 3 7]\n",
+      "  [5 2 2]]\n",
+      "\n",
+      " [[3 5 8]\n",
+      "  [3 6 4]]\n",
+      "\n",
+      " [[3 2 1]\n",
+      "  [0 9 5]]\n",
+      "\n",
+      " [[8 9 5]\n",
+      "  [7 9 6]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(a)"
    ]
   },
   {
@@ -95,11 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -111,11 +193,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(b)"
    ]
   },
   {
@@ -127,11 +230,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2, 3)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.shape"
    ]
   },
   {
@@ -143,11 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "#No we can't add a and b because they don't have the same size."
    ]
   },
   {
@@ -159,11 +293,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "c = b.reshape(2, 3, 5)\n",
+    "c.shape\n"
    ]
   },
   {
@@ -175,11 +321,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code/answer here"
+    "d = a+c\n",
+    "#Now, a and c have the same size."
    ]
   },
   {
@@ -191,11 +338,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.24378898 0.56090186 0.21651593 0.07740436 0.0568608 ]\n",
+      "  [0.03123124 0.7019853  0.47127175 0.59374347 0.86614783]\n",
+      "  [0.32538374 0.256171   0.12676298 0.01987238 0.35913956]]\n",
+      "\n",
+      " [[0.81131396 0.12551257 0.81550582 0.54526635 0.37695554]\n",
+      "  [0.6856947  0.96129555 0.43384217 0.42332409 0.49464326]\n",
+      "  [0.60668046 0.3159333  0.52426685 0.53545079 0.6679694 ]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.24378898 1.56090186 1.21651593 1.07740436 1.0568608 ]\n",
+      "  [1.03123124 1.7019853  1.47127175 1.59374347 1.86614783]\n",
+      "  [1.32538374 1.256171   1.12676298 1.01987238 1.35913956]]\n",
+      "\n",
+      " [[1.81131396 1.12551257 1.81550582 1.54526635 1.37695554]\n",
+      "  [1.6856947  1.96129555 1.43384217 1.42332409 1.49464326]\n",
+      "  [1.60668046 1.3159333  1.52426685 1.53545079 1.6679694 ]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
    ]
   },
   {
@@ -207,11 +391,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "e= a*c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.24378898 0.56090186 0.21651593 0.07740436 0.0568608 ]\n",
+      "  [0.03123124 0.7019853  0.47127175 0.59374347 0.86614783]\n",
+      "  [0.32538374 0.256171   0.12676298 0.01987238 0.35913956]]\n",
+      "\n",
+      " [[0.81131396 0.12551257 0.81550582 0.54526635 0.37695554]\n",
+      "  [0.6856947  0.96129555 0.43384217 0.42332409 0.49464326]\n",
+      "  [0.60668046 0.3159333  0.52426685 0.53545079 0.6679694 ]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e)"
    ]
   },
   {
@@ -227,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code/answer here"
+    "# e is equal to a. Multiply a matrix by an other matrix of 1, the result is the matrix herself."
    ]
   },
   {
@@ -239,11 +446,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9612955481176826"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "np.max(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.019872380936599"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.441027866424773"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(d)"
    ]
   },
   {
@@ -251,6 +509,33 @@
    "metadata": {},
    "source": [
     "#### 15. Now we want to label the values in *d*. First create an empty array *f* with the same shape (i.e. 2x3x5) as *d* using `np.empty`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.24378898, 0.56090186, 0.21651593, 0.07740436, 0.0568608 ],\n",
+       "        [0.03123124, 0.7019853 , 0.47127175, 0.59374347, 0.86614783],\n",
+       "        [0.32538374, 0.256171  , 0.12676298, 0.01987238, 0.35913956]],\n",
+       "\n",
+       "       [[0.81131396, 0.12551257, 0.81550582, 0.54526635, 0.37695554],\n",
+       "        [0.6856947 , 0.96129555, 0.43384217, 0.42332409, 0.49464326],\n",
+       "        [0.60668046, 0.3159333 , 0.52426685, 0.53545079, 0.6679694 ]]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f= np.empty((2,3,5))\n",
+    "f"
    ]
   },
   {
@@ -279,7 +564,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    " for i in d:\n",
+    "    for j in i:\n",
+    "        if np.min(d)<np.mean(d):\n",
+    "            f.insert(25)\n",
+    "    "
    ]
   },
   {
@@ -359,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
