--- a/Labs/module_1/Intro-Pandas/your-code/main.ipynb
+++ b/Labs/module_1/Intro-Pandas/your-code/main.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,23 +690,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-a471ff895d91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0morders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'products'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'name'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LUNCH BAG APPLE DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>13.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RIBBON REEL STRIPES DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>518.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>POPCORN HOLDER</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>5.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>11.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PARTY BUNTING</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>19.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>JAZZ HEARTS ADDRESS BOOK</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>1.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>60.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Description  Quantity  UnitPrice  Revenue\n",
+       "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+       "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+       "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+       "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+       "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+       "5                      POPCORN HOLDER         7       0.85     5.95\n",
+       "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+       "7                       PARTY BUNTING         4       4.95    19.80\n",
+       "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+       "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(orders, name='products')"
+    "#pd.DataFrame(orders).transpose()\n",
+    "#df = pd.DataFrame.from_dict(orders, orient='index')\n",
+    "order = pd.DataFrame(orders)#.transpose()\n",
+    "order\n"
    ]
   },
   {
@@ -718,25 +830,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'sum'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-a354e6a1468b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprod_dic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0morders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'products'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprod_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Quantity'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprod_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Revenue'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'sum'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total quantity ordered is 2978\n",
+      "The total revenue generated is 637.0\n"
      ]
     }
    ],
    "source": [
-    "prod_dic = pd.Series(orders, name='products')\n",
-    "prod_dic['Quantity'].sum()\n",
-    "prod_dic['Revenue'].sum()"
+    "tqty = order['Quantity'].sum()\n",
+    "trevu = order['Revenue'].sum()\n",
+    "print(f'The total quantity ordered is {tqty}\\nThe total revenue generated is {trevu}')"
    ]
   },
   {
@@ -748,12 +857,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most expensive and least expensive items ordered are 11.95 and 0.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "most = order['UnitPrice'].max()\n",
+    "least = order['UnitPrice'].min()\n",
+    "print(f'The prices of the most expensive and least expensive items ordered are {most} and {least}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
