--- a/Labs/module_2/Probability-Intro/your-code/main.ipynb
+++ b/Labs/module_2/Probability-Intro/your-code/main.ipynb
@@ -24,7 +24,25 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "Statements false :\n",
+    "1. 𝑃(𝐴∪𝐵)=0.6\n",
+    "2. 𝑃(𝐴∩(𝐵∪𝐵𝐶))=0.4\n",
+    "3. 𝑃(𝐴𝐶∩𝐵𝐶)=0.3\n",
+    "4. 𝑃((𝐴∩𝐵)𝐶)=0.9\n",
+    "\n",
+    "Because :\n",
+    "1. P(AUB)=P(A)+P(B)-P(A∩B) = 0,3+0,6-0,1=0,8\n",
+    "2. 𝑃(𝐴∩(𝐵∪𝐵𝐶))= P(A)∩P(A∩B)=0,3-0,1=0,2\n",
+    "3. 𝑃(𝐴𝐶∩𝐵𝐶)=P(A)+P(B)-P(A∩B)= 0,3+0,6-0,1=0,8\n",
+    "4. 𝑃((𝐴∩𝐵)𝐶) = P(A)+P(B)-P(A∩B)= 0,3+0,6-0,1=0,8 = 1-P(A∩B)=1-0.1=\n",
+    "--------------\n",
+    "Statements true :\n",
+    "1. 𝑃(𝐴∩𝐵𝐶)=0.2\n",
+    "Because:\n",
+    "1. 𝑃(𝐴∩𝐵𝐶)= P(A)-P(A∩B)=0,3-0,1=0,2\n",
+    "\n",
+    "\n",
+    "\n",
     "\"\"\""
    ]
   },
@@ -49,7 +67,17 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "10 W\n",
+    "12 r\n",
+    "8 b\n",
+    "\n",
+    "30 balls\n",
+    "-----\n",
+    "Taking a white ball out: 10/30 = 1/3\n",
+    "Taking a white ball out after taking a black ball out: P(w/b)= 10/29*8/30\n",
+    "Taking a red ball out after taking a black and a red ball out.P(r/b/r)=11/28*8/29*12/30\n",
+    "Taking a red ball out after taking a black and a red ball out with reposition.Pr(r/b/r)=11/30*8/30*12/30\n",
+    "\n",
     "\"\"\""
    ]
   },
@@ -75,8 +103,14 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "P(morning cloud day/rain)=5/10\n",
+    "P(morning cloud day)= 4/10\n",
+    "P(rain)=1/10\n",
+    "\n",
+    "P(rain/morning cloud day) = (P(rain)* P(morning cloud day/rain))/P(cloud)=(0.1*0.5)/0.4=0.125\n",
+    "\n",
+    "\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -102,11 +136,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yes</th>\n",
+       "      <th>No</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Men</th>\n",
+       "      <td>0.675</td>\n",
+       "      <td>0.325000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Women</th>\n",
+       "      <td>0.675</td>\n",
+       "      <td>0.352083</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Yes        No\n",
+       "Men    0.675  0.325000\n",
+       "Women  0.675  0.352083"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "\n",
+    "pd.DataFrame({'Yes':[324/480,351/520],'No':[156/480,169/480]}, index=['Men','Women'])"
    ]
   },
   {
@@ -116,7 +203,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "these events are independent\n",
     "\"\"\""
    ]
   }
@@ -137,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
